--- a/app/views/static_pages/statystyki.html.erb
+++ b/app/views/static_pages/statystyki.html.erb
@@ -26,7 +26,7 @@
 </div>
 
 <div class="jumbotron">
-  <h2>Użytkownicy</h2> </td>
+  <h2>Użytkownicy</h2> </td><br/>
   <h4>Ogólna ilość użytkowników: <b><%= User.calculate(:count, :all) %></b></h4> </td>
 
   <h3>Rejestracja użytkowników według dnia: </h3>
