--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,4 +3,6 @@
 <div class="table-responsive">
 <%= render 'users/partials/users_table', users: @users %>
 </div>
-</div>
+<div class="actions" align="center">
+<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary btn-block' %>
+</div><br/>
