--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,62 +20,6 @@ body { padding-top: 20px; }
     padding-top: 70px;
 }
 
-.panel-table .panel-body{
-  padding:0;
-}
-
-.panel-table .panel-body .table-bordered{
-  border-style: none;
-  margin:0;
-}
-
-.panel-table .panel-body .table-bordered > thead > tr > th:first-of-type {
-    text-align:center;
-    width: 100px;
-}
-
-.panel-table .panel-body .table-bordered > thead > tr > th:last-of-type,
-.panel-table .panel-body .table-bordered > tbody > tr > td:last-of-type {
-  border-right: 0px;
-}
-
-.panel-table .panel-body .table-bordered > thead > tr > th:first-of-type,
-.panel-table .panel-body .table-bordered > tbody > tr > td:first-of-type {
-  border-left: 0px;
-}
-
-.panel-table .panel-body .table-bordered > tbody > tr:first-of-type > td{
-  border-bottom: 0px;
-}
-
-.panel-table .panel-body .table-bordered > thead > tr:first-of-type > th{
-  border-top: 0px;
-}
-
-.panel-table .panel-footer .pagination{
-  margin:0; 
-}
-
-/*
-used to vertically center elements, may need modification if you're not using default sizes.
-*/
-.panel-table .panel-footer .col{
- line-height: 34px;
- height: 34px;
-}
-
-.panel-table .panel-heading .col h3{
- line-height: 30px;
- height: 30px;
-}
-
-.panel-table .panel-body .table-bordered > tbody > tr > td{
-  line-height: 34px;
-}
-
-
-
-
 .SearchIcon
 {
     color:#fff;
@@ -83,158 +27,465 @@ used to vertically center elements, may need modification if you're not using de
 }
 .SearchButton
 {
-    background-color: #16a085;
-    border-radius:1px;
+    background-color: #0066FF;
+    border-radius: 1px;
+
 }
 .SearchButton:hover{
-    background-color: #aed6f1;
+    background-color: #0066FF;
 }
 
 .SearchBar{
 
 }
 
+
 table#acrylic {
-            border-collapse: separate;
-            background: #fff;
-            -moz-border-radius: 5px;
-            -webkit-border-radius: 5px;
-            border-radius: 5px;
-            margin: 20px auto;
-            -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-            -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-            cursor: pointer;
-        }
+border-collapse: separate;
+background: #fff;
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+border-radius: 5px;
+margin: 20px auto;
+-moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+-webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+cursor: pointer;
+}
+
+#acrylic thead {
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+border-radius: 5px;
+}
+
+#acrylic thead th {
+font-family: 'roboto';
+font-size: 15px;
+font-weight: 300;
+color: #fff;
+text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+text-align: center;
+padding: 10px;
+background-size: 100%;
+background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #646f7f), color-stop(100%, #4a5564));
+background-image: -moz-linear-gradient(#646f7f, #4a5564);
+background-image: -webkit-linear-gradient(#646f7f, #4a5564);
+background-image: linear-gradient(#0066cc, #4a5564);
+border-top: 1px solid #858d99;
+}
+
+#acrylic thead th:first-child {
+-moz-border-top-right-radius: 5px;
+-webkit-border-top-left-radius: 5px;
+border-top-left-radius: 5px;
+}
+
+#acrylic thead th:last-child {
+-moz-border-top-right-radius: 5px;
+-webkit-border-top-right-radius: 5px;
+border-top-right-radius: 5px;
+}
+
+#acrylic tbody td .btn {
+margin-top: 1px;
+margin-bottom: 1px;
+
+}
+
+#acrylic tbody tr td {
+text-align: center;
+font-family: 'roboto';
+font-weight: 500;
+color: #000000;
+font-size: 13px;
+padding: 10px 10px 10px 10px;
+border-bottom: 1px solid #e0e0e0;
+}
+
+#acrylic tbody tr:nth-child(2n) {
+background: default;
+}
+
+#acrylic tbody tr:last-child td {
+border-bottom: none;
+}
+
+#acrylic tbody tr:last-child td:first-child {
+-moz-border-bottom-right-radius: 5px;
+-webkit-border-bottom-left-radius: 5px;
+border-bottom-left-radius: 5px;
+}
+
+#acrylic tbody tr:last-child td:last-child {
+-moz-border-bottom-right-radius: 5px;
+-webkit-border-bottom-right-radius: 5px;
+border-bottom-right-radius: 5px;
+}
+
+#acrylic tbody:hover > tr td {
+
+opacity: 0.5;
+}
+
+#acrylic tbody:hover > tr:hover td {
+text-shadow: none;
+color: #2d2d2d;
+
+opacity: 1;
+transition: 0.2s all;
+}
         
-        #acrylic thead {
-            -moz-border-radius: 5px;
-            -webkit-border-radius: 5px;
-            border-radius: 5px;
-        }
-        
-        #acrylic thead th {
-            font-family: 'Roboto';
-            font-size: 16px;
-            font-weight: 400;
-            color: #fff;
-            text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
-            text-align: left;
-            padding: 20px;
-            background-size: 100%;
-            background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #646f7f), color-stop(100%, #4a5564));
-            background-image: -moz-linear-gradient(#646f7f, #4a5564);
-            background-image: -webkit-linear-gradient(#646f7f, #4a5564);
-            background-image: linear-gradient(#0066cc, #4a5564);
-            border-top: 1px solid #858d99;
-        }
-        
-        #acrylic thead th:first-child {
-            -moz-border-top-right-radius: 5px;
-            -webkit-border-top-left-radius: 5px;
-            border-top-left-radius: 5px;
-        }
-        
-        #acrylic thead th:last-child {
-            -moz-border-top-right-radius: 5px;
-            -webkit-border-top-right-radius: 5px;
-            border-top-right-radius: 5px;
-        }
-        
-        #acrylic tbody tr td {
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 400;
-            color: #000000;
-            font-size: 13px;
-            padding: 20px 20px 20px 20px;
-            border-bottom: 1px solid #e0e0e0;
-        }
-        
-        #acrylic tbody tr:nth-child(2n) {
-            background: #f0f3f5;
-        }
-        
-        #acrylic tbody tr:last-child td {
-            border-bottom: none;
-        }
-        
-        #acrylic tbody tr:last-child td:first-child {
-            -moz-border-bottom-right-radius: 5px;
-            -webkit-border-bottom-left-radius: 5px;
-            border-bottom-left-radius: 5px;
-        }
-        
-        #acrylic tbody tr:last-child td:last-child {
-            -moz-border-bottom-right-radius: 5px;
-            -webkit-border-bottom-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-        }
-        
-        #acrylic tbody:hover > tr td {
-            
-            opacity: 0.5;
-        }
-        
-        #acrylic tbody:hover > tr:hover td {
-            text-shadow: none;
-            color: #2d2d2d;
-            
-            opacity: 1;
-            transition: 0.2s all;
-        }
-        
-        @media screen and (max-width: 767px) {
-            #acrylic thead {
-                display: none;
-            }
-            #acrylic tr {
-                margin-bottom: 10px;
-                display: block;
-            }
-            #acrylic td {
-                display: block;
-                text-align: right;
-                font-size: 13px;
-                border-bottom: 1px dotted #ccc;
-            }
-            #acrylic td:last-child {
-                border-bottom: 0;
-            }
-            #acrylic td:before {
-                content: attr(data-label);
-                float: left;
-                text-transform: uppercase;
-                font-weight: bold;
-            }
-            table#acrylic {
-                width: 100%;
-            }
-        }
+@media screen and (max-width: 767px) {
+#acrylic thead {
+    display: none;
+}
+#acrylic tr {
+    margin-bottom: 10px;
+    display: block;
+}
+#acrylic td {
+    margin-top: 5px;
+    text-align: right;
+    font-size: 13px;
+    border-bottom: 1px dotted #ccc;
+}
+ #acrylic th{
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#acrylic .btn{
+    margin-top: 10px;
+}
+
+#acrylic td:last-child {
+    border-bottom: 0;
+}
+#acrylic td:before {
+    content: attr(data-label);
+    float: left;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+table#acrylic {
+    width: 100%;
+}
+#acrylic tbody td .btn {
+    margin-top: 50px;
+
+}
+}
+
 
 .span12 h4 {
-    margin-left: 20px;
-    margin-right: 20px;
-    font-family: roboto;
-    font-size: 30px;
-    font-weight: 300;
-    margin-bottom: 15px;
-    margin-top: 20px;
-    text-transform: uppercase;
-}  
+margin-left: 20px;
+margin-right: 20px;
+font-family: 'roboto';
+font-size: 30px;
+font-weight: 300;
+margin-bottom: 15px;
+margin-top: 20px;
+text-transform: uppercase;
+} 
+
+@media all and (max-width:769px) { 
+.span12 h4 {
+margin-left: 20px;
+margin-right: 20px;
+font-family: roboto;
+font-size: 20px;
+font-weight: 700;
+margin-bottom: 15px;
+margin-top: 20px;
+text-transform: uppercase;
+} }
+
 
 .turbolinks-progress-bar {
-  height: 5px;
-  background-color: green;
+height: 5px;
+background-color: blue;
 }
 
 .control-group h5{
-    font-family: roboto;
-    font-weight: bold;
-    font-size: 15px;
+font-family: roboto;
+font-weight: bold;
+font-size: 15px;
 }
 
 .well well-sm h4{
-    font-family: roboto;
-    font-weight: bold;
-    font-size: 15px;
+font-family: roboto;
+font-weight: bold;
+font-size: 15px;
 }
+
+
+.table-bordered {
+border: 1px solid #dddddd;
+border-collapse: separate;
+border-left: 0;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+}
+
+.table {
+width: 100%;
+font-family: 'Open Sans', sans-serif;
+text-align: center;
+margin-bottom: 20px;
+background-color: transparent;
+border-collapse: collapse;
+border-spacing: 0;
+display: table;
+}
+
+.widget.widget-table .table {
+margin-bottom: 0;
+border: none;
+}
+
+.widget.widget-table .widget-content {
+padding: 0;
+}
+
+.widget .widget-header + .widget-content {
+border-top: none;
+-webkit-border-top-left-radius: 0;
+-webkit-border-top-right-radius: 0;
+-moz-border-radius-topleft: 0;
+-moz-border-radius-topright: 0;
+border-top-left-radius: 0;
+border-top-right-radius: 0;
+}
+
+.widget .widget-content {
+padding: 20px 15px 15px;
+background: #FFF;
+border: 1px solid #D5D5D5;
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+border-radius: 5px;
+}
+
+.widget .widget-header {
+position: relative;
+height: 40px;
+line-height: 40px;
+background: #E9E9E9;
+background: -moz-linear-gradient(top, #fafafa 0%, #e9e9e9 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fafafa), color-stop(100%, #e9e9e9));
+background: -webkit-linear-gradient(top, #fafafa 0%, #e9e9e9 100%);
+background: -o-linear-gradient(top, #fafafa 0%, #e9e9e9 100%);
+background: -ms-linear-gradient(top, #fafafa 0%, #e9e9e9 100%);
+background: linear-gradient(top, #fafafa 0%, #e9e9e9 100%);
+text-shadow: 0 1px 0 #fff;
+border-radius: 5px 5px 0 0;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1),inset 0 1px 0 white,inset 0 -1px 0 rgba(255,255,255,0.7);
+border-bottom: 1px solid #bababa;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9');
+-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9')";
+border: 1px solid #D5D5D5;
+-webkit-border-top-left-radius: 4px;
+-webkit-border-top-right-radius: 4px;
+-moz-border-radius-topleft: 4px;
+-moz-border-radius-topright: 4px;
+border-top-left-radius: 4px;
+border-top-right-radius: 4px;
+-webkit-background-clip: padding-box;
+}
+
+thead {
+display: table-header-group;
+vertical-align: middle;
+border-color: inherit;
+}
+
+.widget .widget-header h3 {
+top: 0px;
+position: relative;
+left: 10px;
+display: inline-block;
+margin-right: 3em;
+font-size: 14px;
+font-weight: 600;
+color: #555;
+line-height: 18px;
+text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+}
+
+.widget .widget-header [class^="icon-"], .widget .widget-header [class*=" icon-"] {
+display: inline-block;
+margin-left: 13px;
+margin-right: -2px;
+font-size: 16px;
+color: #555;
+vertical-align: middle;
+}
+
+
+.jumbotron .btn{
+font-family: roboto;
+margin-top: 5px;
+}
+
+
+@media all and (max-width:769px) {
+.jumbotron .btn{
+font-family: roboto;
+display: block;
+list-style: none;
+margin: 0;
+padding: 0;
+margin-top: 5px;
+margin-left: 5px;
+margin-right: 5px;
+}
+}
+
+
+.navbar-header{
+font-family: roboto;
+display: block;
+list-style: none;
+margin: 0;
+padding: 0;
+}
+.navbar-header .navbar-brand{
+color: #333333;
+}
+
+
+h1,h2,h3,h5{
+font-family: roboto;
+}
+
+@media all and (max-width:769px) {
+h3,h5{
+font-family: roboto;
+font-size: 15px;
+font-weight: 200px;
+}
+.h1{
+font-size: 18px;
+
+}
+.h2{
+font-size: 17px;
+}}
+
+
+.actions .btn {
+margin-top: 3px;
+margin-bottom: 5px;
+margin-right: 1px;
+margin-left: 1px;
+font-family: 'roboto';
+}
+
+@media all and (max-width:769px) {
+.actions .btn {
+margin-top: 3px;
+margin-bottom: 5px;
+margin-right: 1px;
+margin-left: 1px;
+font-family: 'roboto';
+}}
+
+@media all and (max-width:769px) {
+.table .table-bordered .btn {
+margin-top: 5px;
+margin-bottom: 5px;
+}}
+
+@media all and (max-width:769px) {
+.navbar-default .navbar-header {
+display: block;
+list-style: none;
+margin: 0;
+padding: 0;
+
+
+}}
+
+
+.control-group .btn{
+margin-top: 5px;
+margin-bottom: 5px;
+margin-right: 2px;
+margin-left: 3px;
+font-family: 'roboto';
+}
+.control-group .control-label{
+margin-right: 10px;
+margin-bottom: 3px;
+margin-top: 5px;
+margin-left: 12px;
+}
+.control-label h5{
+margin-left: 0px;
+margin-top: 5px;
+margin-bottom: 7px;
+}
+
+@media all and (max-width:769px) {
+.control-group .btn{
+margin-top: 5px;
+margin-bottom: 5px;
+margin-right: 2px;
+margin-left: 3px;
+font-family: 'roboto';
+}
+.control-group .control-label{
+margin-right: 10px;
+margin-bottom: 5px;
+margin-top: 5px;
+margin-left: 12px;
+font-family: 'roboto';
+}
+.control-label h5{
+margin-left: 0px;
+margin-top: 5px;
+margin-bottom: 3px;
+}
+}
+
+
+.jumbotron{
+font-family: 'roboto';
+}
+.jumbotron h2{
+font-size: 24px;
+
+}
+.jumbotron td{
+font-family: 'roboto';
+}
+
+@media all and (max-width:769px) {
+.jumbotron td{
+text-align: center;
+display:block;
+font-family: 'roboto';
+}
+.jumbotron h2{
+font-size: 20px;
+}
+}
+
+
+.container .img-responsive{
+margin-right: 10px;
+margin-left: 10px;
+margin-top: 10px;
+margin-bottom: 10px;
+}
+
+@media all and (max-width:769px) {
+.container .img-responsive{
+margin-right: 5px;
+margin-left: 5px;
+margin-top: 5px;
+margin-bottom: 5px;
+text-align: center;
+}}
+
