--- a/app/views/stanowiskos/partials/_stanowiskos_table.html.erb
+++ b/app/views/stanowiskos/partials/_stanowiskos_table.html.erb
@@ -1,41 +1,26 @@
-<div class="container">
-<div class="row">
-<div class="col-md-10 col-md-offset-1">
-<div class="panel panel-default panel-table">
-<div class="panel-heading">
-<div class="row">
-<div class="col col-xs-6">
-<h3 class="panel-title"><strong>Stanowiska</strong></h3>
-</div>
-<div class="col col-xs-6 text-right">
-<%= link_to 'Dodaj stanowisko', new_stanowisko_path, class:'btn btn-sm btn-success btn-create' %>
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
-</div>
-</div>
-</div>
-<div class="panel-body ">
-<table class="table table-striped table-bordered table-list">
-<thead>
-<tr>
-  <th><em class="fa fa-cog"></em></th>
-  <th class="hidden-xs"><h5>ID</h5></th>
-  <th>Nazwa</th>
-</tr> 
-</thead>
-<tbody>
-<% @stanowiskos.each do |stanowisko| %>
-    <tr>
-      <td align="center">
-      <%= link_to '', stanowisko, class:'btn btn-warning fa fa-eye' %>
-      <%= link_to '', edit_stanowisko_path(stanowisko), class:'btn btn-primary fa fa-pencil' %>
-      <%= link_to '', stanowisko, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
-      </td>
-      <td class="hidden-xs"><%= stanowisko.id %></td>
-      <td><%= stanowisko.nazwa %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="wrapper">
+  <table id="acrylic">
+    <thead>
+      <tr>
+        <th>L.p</th>
+        <th>Nazwa</th>
+        <th>Akcje</th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @stanowiskos.each do |stanowisko| %>
+        <tr>
+          <td data-label="L.p"><%= stanowisko.id %></td>
+          <td data-label="Nazwa"><%= stanowisko.nazwa %></td>
+          <td><%= link_to 'Pokaż', stanowisko, class:'btn btn-warning btn-xs' %></td>
+          <td><%= link_to 'Edytuj', edit_stanowisko_path(stanowisko), class:'btn btn-primary btn-xs' %></td>
+          <td><%= link_to 'Usuń', stanowisko, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger btn-xs' %>
+          </td>
+        </tr>
+             <% end %>
+    </tbody>
+  </table>
 </div>
 </div>
-</div></div></div>
