--- a/app/views/zgloszenie_aktywnoscs/index.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/index.html.erb
@@ -1,52 +1,38 @@
-<h1>Zgłoszenie - Aktywność</h1><br/>
-
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="panel panel-default panel-table">
-              <div class="panel-heading">
-                <div class="row">
-                  <div class="col col-xs-6">
-                    <h3 class="panel-title"></h3>
-                  </div>
-                  <div class="col col-xs-6 text-right">
-                  <%= link_to 'Dodaj do zgłoszenia', new_zgloszenie_aktywnosc_path, class:'btn btn-sm btn-success btn-create' %>
+<%= render 'zgloszenie_aktywnoscs/edit/page', zgloszenie_aktywnoscs: @zgloszenie_aktywnoscs %>
+<div class="table-responsive">
+<div class="wrapper">
+        <table id="acrylic">
+            <thead>
+                <tr>
+                    <th>L.p</th>
+                    <th>Zgłoszenie</th>
+                    <th>Autor</th>
+                    <th>Opis</th>
+                    <th>Akcje</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+           <% @zgloszenie_aktywnoscs.each do |zgloszenie_aktywnosc| %>
+                <tr>
+                    <td data-label="L.p"><%= zgloszenie_aktywnosc.id %></td>
+                    <td data-label="Zgłoszenie"><%= Zgloszenie.where(id:zgloszenie_aktywnosc.zgloszenie).pluck(:id).last %></td>
+                    <td data-label="Autor"><%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:first_name).last %></td>
+                    <td data-label="Opis"><%= zgloszenie_aktywnosc.tresc %></td>
+        <%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:last_name).last %>
+      <td><%= link_to 'Pokaż', zgloszenie_aktywnosc, class:'btn btn-warning btn-xs' %></td>
+      <td><%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(zgloszenie_aktywnosc), class:'btn btn-primary btn-xs' %></td>
+      <td><%= link_to 'Usuń', zgloszenie_aktywnosc, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger btn-xs' %></td>
+                 </tr>
+                 <% end %>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div class="actions" align="center">
+<%= link_to 'Dodaj do zgłoszenia', new_zgloszenie_aktywnosc_path, class:'btn btn-sm btn-primary btn-create' %>
                   <% if current_user.admin? %>
-                  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
+                  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
                   <% end %>
                   </div>
-                </div>
-              </div>
-              <div class="panel-body">
-                <table class="table table-striped table-bordered table-list">
-                  <thead>
-                    <tr>
-                        <th><em class="fa fa-cog"></em></th>
-                        <th class="hidden-xs">ID</th>
-                        <th>Zgłoszenie</th>
-                        <th>Autor</th>
-                        <th>Opis</th>
-                    </tr> 
-                  </thead>
-                  <tbody>
-                  <% @zgloszenie_aktywnoscs.each do |zgloszenie_aktywnosc| %>
-                          <tr>
-                            <td align="center">
-                            <%= link_to '', zgloszenie_aktywnosc, class:'btn btn-warning fa fa-eye' %>
-                            <%= link_to '', edit_zgloszenie_aktywnosc_path(zgloszenie_aktywnosc), class:'btn btn-primary fa fa-pencil' %>
-                            <%= link_to '', zgloszenie_aktywnosc, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
-                            </td>
-                            <td class="hidden-xs"><%= zgloszenie_aktywnosc.id %></td>
-                            <td><%= Zgloszenie.where(id:zgloszenie_aktywnosc.zgloszenie).pluck(:id).last %></td>
-                            <td><%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:first_name).last %>
-        <%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:last_name).last %></td>
-        <td><%= zgloszenie_aktywnosc.tresc %></td>
-                          </tr>
-                          <% end %>
-                        </tbody>
-                </table>
-              </div>
-            </div>
-</div></div></div>
