--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -14,18 +14,21 @@
     </div>
   <% end %><br />
 
-  <div class="control-group">
+            <div class="control-group">
+            <label class="control-label"  for="username"><h5>Nazwa pracownika</h5></label>
+            <div class="controls">
             <% if current_user.admin? %>
-            <%= f.label :nazwa_pracownika %>
-            <%= f.select :pracownikid, User.where(ispracownik: true).pluck(:id, :first_name, :last_name).map{|db_fields| db_fields.join(' ')} %>
-            <% end %><br/>
+            <%= f.select :pracownikid, User.where(ispracownik: true).pluck(:id, :first_name, :last_name).map{|db_fields| db_fields.join(' ')}, class: 'input-xlarge' %>
+            <% end %></div><br/>
+            <div class="control-group">
             <label class="control-label"  for="username"><h5>Zgłoszenie do działu</h5></label>
             <div class="controls">
               <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", id:"dzialselect", class: 'input-xlarge' %>
             </div><br/>
           
-            <%= f.label :ID_użytkownika %><br/>
-            <%= f.text_field :user_id, :value => current_user.id ,:readonly => true %><br/>
+            <label class="control-label"  for="username"><h5>ID użytkownika</h5></label>
+            <div class="controls">
+            <%= f.text_field :user_id, :value => current_user.id ,:readonly => true, class: "input-xlarge" %></div><br/>
 
             <% if current_user.id != :user_id %>
           </div><br/>
