--- a/app/views/dzials/index.html.erb
+++ b/app/views/dzials/index.html.erb
@@ -5,5 +5,5 @@
 </div>
 <div class="actions" align="center">
 <%= link_to 'Dodaj dział', new_dzial_path, class:'btn btn-sm btn-primary btn-create' %>
-                  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
-                  </div>
+<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
+</div><br/>
