--- a/app/views/dzials/partials/_search.html.erb
+++ b/app/views/dzials/partials/_search.html.erb
@@ -1,5 +1,4 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-<div class="row">
+<div class="row" style="margin-top: 10px">
 <div class="col-lg-6">
 <div class="input-group">
 <%= form_tag( dzials_path ,method: :get, remote: true, class: "search_form_u") do %>
