--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Awaria</h1>
+<%= render 'static_pages/edit/page', static_pages: @static_pages %>
 <div class="jumbotron">
-<p align="center"><b>Awaria</b> - system rejestrowania usterek i napraw.</p>
+<p align="center"><b></b>System rejestrowania usterek i napraw.</p>
 </div>
