--- a/app/views/zgloszenies/partials/_search.html.erb
+++ b/app/views/zgloszenies/partials/_search.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 10px">
 <div class="col-lg-6">
 <div class="input-group">
 <%= form_tag( zgloszenies_path ,method: :get, remote: true, class: "search_form_z") do %>
