--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -418,6 +418,12 @@ padding: 0;
 
 }}
 
+.controls .input-xlarge {
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 
 .control-group .btn{
 margin-top: 5px;
@@ -575,4 +581,19 @@ text-align: center;
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
+}
+
+.media .media-body h4 p{
+  font-family: 'roboto';
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.media .media-body .btn{
+  font-family: 'roboto';
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
