--- a/app/views/dzials/_form.html.erb
+++ b/app/views/dzials/_form.html.erb
@@ -20,6 +20,7 @@
           <div class="control-group">
             <div class="controls">
              <%= f.submit "Dodaj Dział", class: "btn btn-success" %>
+             <%= link_to 'Wróć', dzials_path, class: "btn btn-primary" %>
             </div>
           </div>
 <% end %><br />
