--- a/app/views/stanowiskos/_form.html.erb
+++ b/app/views/stanowiskos/_form.html.erb
@@ -21,6 +21,8 @@
             <!-- Button -->
             <div class="controls">
             <%= f.submit "Dodaj", class: "btn btn-success"%>
+            <%= link_to 'Pokaż', @stanowisko, class: "btn btn-primary" %>
+            <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-success" %>
             </div>
           </div>
 <% end %><br />
