--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,5 +4,5 @@
 <%= render 'users/partials/users_table', users: @users %>
 </div>
 <div class="actions" align="center">
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary btn-block' %>
+<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
 </div><br/>
