--- a/app/views/zgloszenie_aktywnoscs/_form.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/_form.html.erb
@@ -27,6 +27,8 @@
           <div class="control-group">
             <div class="controls">
             <%= f.submit "Dodaj", class:'btn btn-success' %>
+            <%= link_to 'Pokaż', @zgloszenie_aktywnosc, class: "btn btn-primary" %>
+            <%= link_to 'Wróć', zgloszenie_aktywnoscs_path, class: "btn btn-danger" %>
             </div>
           </div>
 <% end %><br />
