--- a/app/views/dzials/edit.html.erb
+++ b/app/views/dzials/edit.html.erb
@@ -3,5 +3,4 @@
 <%= render 'form', dzial: @dzial %>
 
 <div class="actions">
-<%= link_to 'Pokaż', @dzial, class: "btn btn-danger" %> 
-<%= link_to 'Wróć', dzials_path, class: "btn btn-primary" %></div>
+<%= link_to 'Pokaż', @dzial, class: "btn btn-danger" %></div>
