--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
     <%= render 'layouts/header' %>
     <div class="container">
     <div class="row" style="margin-top: 120px">
+    <div class="fr">
       <% flash.each do |name, msg| %>
       <%= content_tag(:div, msg, class: "alert alert-info") %>
       <% end %>
        <%= yield %>
      </div>
      </div>
-
+</div>
   </body>
 </html>
