--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -25,11 +25,13 @@
             <div class="controls">
               <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", id:"dzialselect", class: 'input-xlarge-s' %>
             </div><br/>
-          
+
+            <% if zgloszeny.visible? %>
             <label class="control-label"  for="username"><h5>ID użytkownika</h5></label>
             <div class="controls">
-            <%= f.text_field :user_id, :value => current_user.id ,:readonly => true, class: "input-xlarge" %></div><br/>
-
+            <%= f.text_field :user_id, :value => current_user.id ,:readonly => true, class: "input-xlarge" %><br/>
+            <% end %>
+          </div>
             <% if current_user.id != :user_id %>
           </div><br/>
           <div class="control-group">
@@ -52,9 +54,9 @@
           </div><br/>
           <div class="control-group">
             <label class="control-label" for="password"><h5>Wysyłka</h5></label>
-            
+
             <%= f.select :wysylka, [['Tak', true], ['Nie', false]], class: "form-control" %>
-           
+
           </div><br/>
           <% end %>
           <% if current_user.ispracownik? %>
@@ -92,5 +94,3 @@
           </div>
 
 <% end %><br />
-
-
