--- a/app/views/zgloszenie_aktywnoscs/index.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/index.html.erb
@@ -35,4 +35,4 @@
                   <% if current_user.admin? %>
                   <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
                   <% end %>
-                  </div>
+                  </div><br/>
