--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,8 +65,7 @@ body { padding-top: 20px; }
 
 @media screen and (max-width: 767px) {
 .SearchButton{
-   margin-left: 7px;
-   margin-right: 10px;
+   margin-left: 10px;
 }
 .input-group .SearchBar{
   text-transform: uppercase;
@@ -172,10 +171,13 @@ transition: 0.2s all;
 @media screen and (max-width: 767px) {
 #acrylic thead {
     display: none;
+    margin-right: 10px;
 }
 #acrylic tr {
     margin-bottom: 10px;
-    display: block;
+    -webkit-display: block;
+    -moz--display: block;
+    -ms--display: block;
 }
 #acrylic td {
     margin-top: 5px;
@@ -377,6 +379,7 @@ font-family: 'roboto';
 .jumbotron .btn{
 font-family: roboto;
 margin-top: 5px;
+font-size: 18px;
 }
 
 @media all and (max-width:769px) {
@@ -404,18 +407,9 @@ padding: 0;
 margin-top: 5px;
 margin-left: 5px;
 margin-right: 5px;
+text-transform: uppercase;
+font-size: 15px;
 }
-}
-
-.navbar-header{
-font-family: roboto;
-display: block;
-list-style: none;
-margin: 0;
-padding: 0;
-}
-.navbar-header .navbar-brand{
-color: #333333;
 }
 
 
@@ -442,7 +436,7 @@ font-size: 17px;
 margin-top: 3px;
 margin-bottom: 5px;
 margin-right: 1px;
-margin-left: 1px;
+margin-left: 10px;
 font-family: 'roboto';
 }
 
@@ -450,10 +444,12 @@ font-family: 'roboto';
 .actions .btn {
 margin-top: 3px;
 margin-bottom: 5px;
-margin-right: 10px;
-margin-left: 10px;
+margin-right: auto;
+margin-left: auto;
 font-family: 'roboto';
 text-transform: uppercase;
+display: block;
+width: 60%;
 }}
 
 @media all and (max-width:769px) {
@@ -463,14 +459,21 @@ margin-bottom: 5px;
 }}
 
 
-.controls .input-xlarge {
-  margin-left: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+.field {
+  margin-left: 10px;
+  margin-top: 15px;
+  margin-bottom: 10px;
   margin-right: 5px;
+  font-family: 'roboto';
+  text-transform: uppercase;
+  -webkit-border-radius-topleft: 4px;
 
 }
-
+@media all and (max-width:769px) {
+.field {
+  text-align: center;
+}
+}
 
 .control-group .btn{
 margin-top: 5px;
@@ -619,6 +622,18 @@ text-align: center;
   margin-left: 5px;
   margin-right: 5px;
 }
+@media (min-width: 768px) {
+  .media .media-body h4 p{
+    text-transform: uppercase;
+  }
+  .media .media-body .btn{
+    text-transform: uppercase;
+  }
+  .well-sm .media-body .media-heading th{
+    text-transform: uppercase;
+  }
+}
+
 .control-label h5{
   margin-right: 0px;
   margin-left: 0px;
