--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-<%= devise_error_messages! %>
+  <%= devise_error_messages! %>
 
 <div class="container">
 <div class="row">
@@ -10,22 +10,23 @@
 <div class="row">
 <div class="form-group">
 <%= f.email_field :email, autofocus: true, class: "form-control input-lg", placeholder: "Email" %>
-<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-<% end %>
-<% if @minimum_password_length %>
-<br />
-<em><%= @minimum_password_length %> characters minimum</em>
-<% end %>
 </div>
-<div class="form-group">
-<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg", placeholder: "Hasło" %>
+<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <% end %>
 
+
+<div class="form-group">
+<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg", placeholder: "Hasło"  %>
+    <% if @minimum_password_length %>
+      <br />
+      <em><%= @minimum_password_length %> characters minimum</em>
+    <% end %>
 </div>
 <div class="row">
 <div class="col-xs-12 col-sm-6 col-md-6">
   <div class="form-group">
-  <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg", placeholder: "Powtórz hasło" %>
+  <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg", placeholder: "Powtórz hasło"  %>
   </div>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-6">
@@ -38,12 +39,13 @@
 <hr class="colorgraph">
 <div class="row">
 <div class="col-xs-12 col-md-6">
-<%= f.submit "Aktualizuj", class:'btn btn-primary btn-block btn-lg' %></div>
+<%= f.submit "Aktualizuj", class:'btn btn-success btn-block btn-lg' %>
+<% end %></div>
 <div class="col-xs-12 col-md-6">
-<%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger btn-block btn-lg' %></div>       
+<%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger btn-block btn-lg' %>
+</div>       
 </div>
 </form>
 </div>
 </div>
 </div> 
-<% end %>
